[project]
name = "hcr-quick-viewer"
version = "0.1.0"

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "panel>=1.4",
    "bokeh>=3.4",
    "boto3>=1.34",
    "cachetools>=5.3",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.9.9",
    "moto[s3]>=5.0",
]
docs = [
    "Sphinx",
    "sphinx-jinja",
    "furo",
    "docutils",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
